Fixed missalignment item.

--- a/css/mexp-flickr.css
+++ b/css/mexp-flickr.css
@@ -1,5 +1,5 @@
 .mexp-item-flickr {
-	max-height: 272px;
+	height: 272px;
 }
 
 .mexp-item-flickr .mexp-item-thumb {
